[project]
name="gh-spack-pr"
description="Tools and GitHub CLI extension to build PRs for the spack package manager"
dependencies=[
  "pexpect",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  'black',
  "isort",
  "mypy",
  "pylint",
]

[tool.black]
line-length = 99
target-version = ['py38', 'py39', 'py310']

[tool.isort]
line_length = 99
profile = "black"
sections = [
  "FUTURE",
  "STDLIB",
  "THIRDPARTY",
  "LOCALFOLDER",
]

[tool.codespell]
ignore-words-list = "THIRDPARTY"

[tool.mypy]
python_version = "3.10"
files = ['*.py']

# -----------------------------------------------------------------------------
# Pylint - https://pylint.pycqa.org/en/latest/technical_reference/features.html
# -----------------------------------------------------------------------------
[tool.pylint.messages_control]
# These are safe to disable, fixing them is best done during a later code cleanup phases
disable = [
  "use-implicit-booleaness-not-comparison",
  "fixme"
]
# Maximum number of branch for function / method body.
# defaults to: max-branches=12
max-branches = 20

# Maximum number of locals for function / method body.
# defaults to: max-locals=15
max-locals = 24

# Maximum number of statements in function / method body.
# defaults to: max-statements=50
max-statements = 80

# Maximum number of lines in a module.
# defaults to: max-module-lines=1000
max-module-lines=2000

[tool.pyright]
python_version = "3.10"
verboseOutput = true
# useLibraryCodeForTypes = true
# reportMissingImports = true
# reportWildcardImportFromLibrary = true
include = ['.']
ignore = ['']
# extraPaths = ['']

[tool.pytype]
inputs = ["cli/check.py"]
exclude = ["cli/_vendor/**"]
